group header margin/spacing fixs

--- a/htdocs/sites/miamitech.org/themes/miamitech/css/mt.css
+++ b/htdocs/sites/miamitech.org/themes/miamitech/css/mt.css
@@ -327,14 +327,9 @@ body #navigation {
 	width: 90% !important;
 }
 
-#page #group-page-block h1{
-	margin: 0 0 0 15px; 
-}
-
-/* New group head block/area this is the only styles affecting on that block right now */
-#group-page-head{
-
-}
+/**
+  *  New group head block/area this is the only styles affecting on that block right now
+**/
 
 #group-page-head .wrapper{
     margin-top: 0px;
@@ -351,7 +346,7 @@ body #navigation {
 
 #group-page-head .wrapper h1{
     margin: 0px !important;
-	margin-left: 16px;
+	margin-left: 17px !important;
     white-space: nowrap;
     overflow: hidden;
 }
@@ -370,25 +365,11 @@ body #navigation {
     margin-left: 16px;
 }
 
-#group-page-head a h1{
-    margin: 0px !important;
-    padding: 0px;
-    color: inherit;
-    float: left;
-}
-
-#group-page-head .wrapper a h1{
-    overflow: hidden;
-    white-space:nowrap;
-    max-width: 80%;
-    margin: 0 0 0 10px;
-}
-
 #group-page-head .wrapper img{
     margin-right: 15px;
 }
 
-/* group-page-head */
+/* /group-page-head */
 
 #block-ds-5c755d31699c072160e29da9599e28f3 .field {
 	margin-bottom: 15px;
